samples/_failures_safe/1761352275_08831e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a1735355.c: In function ‘main’:
./samples/SAFE/__tmp_a1735355.c:140:5: error: expected expression at end of input
  140 |     add_edge(&graph, 4, 3,
      |     ^~~~~~~~
./samples/SAFE/__tmp_a1735355.c:140:5: error: expected declaration or statement at end of input
